Sentry provider update (adding the TableCell) (#319)
* wip

* Add TableCell

* Remove instant queries

* TableCell: fix fp bindgen traits

* Update fiberplane-ot for new TableCell

* Add Table cell to templates

* Add TableCell to fiberplane templates

* Update sentry provider

* Add from offset to suggestions (#316)

Implement the accepted part of RFC 77 about suggestions improvements

Now returned suggestions include a from optional offset to say where the
suggested text should start applying. When None, the suggestion should be
appended to the currently typed text. Use Some(0) to replace all text.

* Mark suggestion support in prometheus queries
* Prevent failure of API generation script on missing folder

Fixes FP-2851

* Fix test

* Cleanup

* Use ContentWriter

And also add timestamp to the content writer

* Cleanup code

* Feedback

* Remove prometheus instant logic

* Remove unused code

* Add serde traits to skip serializing

* Use lowercase more

* Clean up pr

* Regenerate fiberplane-provider-runtime

* Update fp-bindgen & regenerate provider runtime

* Feedback on pr

* Alias type

* Rename TableRowValue -> TableCellValue

* Serialize timestamp differently

* Revert type alias

* change tag from 'type' to 'cellValueType'

* Embedding the cell

* use embedded cell

* Add type alias

* Export TableRowData type

* Update openapi spec

---------
